whoami/templates/networkpolicy.yaml
# Allow Traefik (in kube-system) to forward requests from to services in this namespace
# Without this, HTTPRoute and Ingress resources will not work
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  podSelector: {}
  policyTypes:
  - Ingress
---
# Allow anything within this namespace to talk to anything else
# (could be stricter, but is more of a maintenance burdon)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
# This service has no need to connect out to the Internet,
# pods in other namespaces, or the Kubernetes API
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
